WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162741
Arrow functions should not allow duplicate parameter names
https://bugs.webkit.org/show_bug.cgi?id=162741
Summary
Arrow functions should not allow duplicate parameter names
Saam Barati
Reported
2016-09-29 11:43:54 PDT
...
Attachments
patch
(17.36 KB, patch)
2016-09-30 11:10 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2016-09-30 11:10:59 PDT
Created
attachment 290352
[details]
patch
WebKit Commit Bot
Comment 2
2016-09-30 11:46:40 PDT
Comment on
attachment 290352
[details]
patch Clearing flags on attachment: 290352 Committed
r206647
: <
http://trac.webkit.org/changeset/206647
>
WebKit Commit Bot
Comment 3
2016-09-30 11:46:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug